# robotic_vision_integration_package

./: .gitignore  .gitlab-ci.yml  LICENSE  ci_script.sh  demo.md  readme.md
rvip/: CMakeLists.txt  README.md  package.xml  rosdoc.yaml
rvip/include/opengr/: super4pcs.h  super4pcs.hpp
rvip/include/rvip/: cuboid_generation.h  cuboid_generation.hpp  pose_alignment.h  pose_alignment.hpp  rvip_main.h  rvip_main.hpp
rvip/launch/: run.launch
rvip/rviz/: debug_config.rviz
rvip/src/: main.cpp
rvip/src/test/: test_rvip.cpp
rvip/test/: run_test.test
rvip_roi_parser/: CMakeLists.txt  README.md  package.xml
rvip_roi_parser/src/: main.cpp
